# Sophis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  FOUNDER_SELF_RESTRICTION.md  HARD_FORK_POLICY.md  LAUNCH_CHECKLIST.md  LICENSE  MAINTAINERS.md  MONETARY_POLICY.md  OPERATIONAL_BOUNDARIES.md  POW_POLICY.md  README.md  SECURITY.md  SUCCESSION.md  Whitepaper.md  build-docker-multi-arch.sh  check  check.ps1  commit  test
components/addressmanager/: Cargo.toml
components/addressmanager/src/: lib.rs  port_mapping_extender.rs
components/addressmanager/src/stores/: address_store.rs  banned_address_store.rs  mod.rs
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
components/consensusmanager/: Cargo.toml
components/consensusmanager/src/: batch.rs  lib.rs  session.rs
consensus/: Cargo.toml
consensus/benches/: parallel_muhash.rs
consensus/client/: Cargo.toml
consensus/client/src/: error.rs  hash.rs  header.rs  imports.rs  input.rs  lib.rs  optional_header.rs  outpoint.rs  output.rs  parents.rs  sign.rs  signing.rs  transaction.rs  utils.rs  utxo.rs
consensus/client/src/serializable/: mod.rs  numeric.rs  string.rs
consensus/core/: Cargo.toml
consensus/core/benches/: serde_benchmark.rs
consensus/core/src/: acceptance_data.rs  block.rs  blockhash.rs  blockstatus.rs  constants.rs  header.rs  lib.rs  merkle.rs  muhash.rs  network.rs  pruning.rs  sign.rs  subnets.rs  trusted.rs  tx.rs
consensus/core/src/alt/: codec.rs  mod.rs  store_types.rs
consensus/core/src/api/: counters.rs  mod.rs
consensus/core/src/config/: bps.rs  constants.rs  genesis.rs  mod.rs  params.rs
consensus/core/src/da/: codec.rs  mod.rs  store_types.rs
consensus/core/src/errors/: block.rs  consensus.rs  pruning.rs  sync.rs  tx.rs
consensus/core/src/events/: codec.rs  mod.rs  store_types.rs
consensus/core/src/hashing/: header.rs  mod.rs  sighash.rs  tx.rs  wasm.rs
consensus/core/src/mass/: mod.rs
consensus/core/src/tx/: script_public_key.rs
consensus/core/src/utxo/: utxo_diff.rs  utxo_inquirer.rs
consensus/notify/: Cargo.toml
consensus/notify/src/: collector.rs  connection.rs  notification.rs  notifier.rs  root.rs  service.rs
consensus/pow/: Cargo.toml
consensus/pow/benches/: bench.rs
consensus/pow/src/: lib.rs  matrix.rs  wasm.rs  xoshiro.rs
consensus/src/: config.rs  errors.rs  lib.rs  params.rs  svm_alt.rs  svm_da.rs  svm_vrf.rs  test_helpers.rs
consensus/src/consensus/: cache_policy_builder.rs  ctl.rs  factory.rs  mod.rs  services.rs  storage.rs  test_consensus.rs  utxo_set_override.rs
consensus/src/constants/: mod.rs
consensus/src/model/services/: reachability.rs  relations.rs  statuses.rs
consensus/src/model/stores/: acceptance_data.rs  alt.rs  block_filters.rs  block_transactions.rs  block_window_cache.rs  children.rs  da.rs  daa.rs  depth.rs  events.rs  ghostdag.rs  headers.rs  headers_selected_tip.rs  max_chain_work_seen.rs  mod.rs  past_pruning_points.rs  pruning.rs  pruning_meta.rs  pruning_samples.rs  reachability.rs  relations.rs  selected_chain.rs  statuses.rs  tips.rs  utxo_diffs.rs  utxo_multisets.rs  utxo_set.rs  virtual_state.rs
consensus/src/pipeline/: deps_manager.rs  mod.rs  monitor.rs
consensus/src/pipeline/body_processor/: body_validation_in_context.rs  body_validation_in_isolation.rs  processor.rs
consensus/src/pipeline/header_processor/: post_pow_validation.rs  processor.rs  (+2 more)
consensus/src/processes/: Parallel Processing.md  block_depth.rs  coinbase.rs  difficulty.rs  parents_builder.rs  past_median_time.rs  pruning.rs  relations.rs  traversal_manager.rs  utils.rs  window.rs
consensus/wasm/: Cargo.toml
consensus/wasm/src/: error.rs  utils.rs
crypto/hashes/: Cargo.toml
crypto/hashes/benches/: bench.rs
crypto/hashes/src/: hashers.rs  lib.rs
crypto/merkle/: Cargo.toml
crypto/merkle/src/: lib.rs
crypto/txscript/: Cargo.toml
crypto/txscript/errors/: Cargo.toml
crypto/txscript/examples/: kip-10.rs
crypto/txscript/src/: caches.rs  data_stack.rs  error.rs  lib.rs  runtime_sig_op_counter.rs  script_builder.rs  script_class.rs  standard.rs
indexes/processor/: Cargo.toml
indexes/processor/src/: errors.rs  processor.rs  service.rs
indexes/utxoindex/: Cargo.toml
indexes/utxoindex/src/: index.rs  update_container.rs
mining/errors/: Cargo.toml
mining/errors/src/: block_template.rs  mempool.rs
notify/: Cargo.toml
notify/benches/: bench.rs
notify/src/: broadcaster.rs  collector.rs  lib.rs  listener.rs  notification.rs  notifier.rs  root.rs  scope.rs  subscriber.rs
notify/src/address/: mod.rs  tracker.rs
notify/src/subscription/: compounded.rs  context.rs  single.rs
oracle/contract/: Cargo.toml
oracle/contract/src/: lib.rs
oracle/core/: Cargo.toml
oracle/core/src/: error.rs  journal.rs  lib.rs  price.rs
oracle/feeds/: Cargo.toml
oracle/feeds/src/: account.rs  lib.rs  pythnet.rs  rpc.rs
oracle/host/: Cargo.toml
oracle/host/src/: air.rs  config.rs  decompress_air_stark.rs  decompress_air_stark_chunked.rs  lib.rs  reduce_mod_l_air_stark.rs  scalar_mul_air_stark.rs  scalar_mul_air_stark_chunked.rs  sha512_air_stark.rs  verify_air_stark.rs  verify_air_stark_chunked.rs
oracle/pqc-contract/: Cargo.toml
oracle/pqc-contract/src/: lib.rs
oracle/pqc-core/: Cargo.toml
oracle/pqc-core/src/: error.rs  lib.rs  sign.rs  source.rs  types.rs
oracle/pqc-indexer/: Cargo.toml
oracle/pqc-indexer/src/: lib.rs  main.rs
oracle/pqc-publisher/: Cargo.toml
oracle/pqc-publisher/src/: lib.rs  main.rs
rothschild/: Cargo.toml
rothschild/benches/: bench.rs
rothschild/src/: main.rs
simpa/: Cargo.toml
simpa/src/: blocks_json.rs  main.rs
simpa/src/simulator/: miner.rs  network.rs
sophis-dnsseeder/: Cargo.toml
sophis-dnsseeder/src/: crawler.rs  dns.rs  main.rs
sophis-explorer/: Cargo.toml
sophis-explorer/html/: address.html  block.html  index.html  tx.html
sophis-explorer/src/: api.rs  main.rs  rpc.rs
sophisd/: Cargo.toml  README.md
sophisd/src/: args.rs  daemon.rs  main.rs
testnet-faucet/: Cargo.toml
testnet-faucet/src/: main.rs
(+977 files in other folders)
