[package]
name = "rothschild"
description = "Sophis Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sophis-addresses.workspace = true
sophis-consensus-core.workspace = true
sophis-core.workspace = true
sophis-grpc-client.workspace = true
sophis-notify.workspace = true
sophis-rpc-core.workspace = true
sophis-txscript.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
