[package]
name = "simpa"
description = "Sophis Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sophis-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
sophis-addresses.workspace = true
sophis-consensus-core.workspace = true
sophis-consensus-notify.workspace = true
sophis-consensus.workspace = true
sophis-core.workspace = true
sophis-database.workspace = true
sophis-hashes.workspace = true
sophis-perf-monitor.workspace = true
sophis-txscript.workspace = true
sophis-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
flate2.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json.workspace = true
serde.workspace = true
sophis-testing-integration.workspace = true


[features]
heap = ["dhat", "sophis-alloc/heap"]
semaphore-trace = ["sophis-utils/semaphore-trace"]

[lints]
workspace = true
