[package]
name = "testnet-faucet"
description = "Sophis Testnet Faucet — HTTP server that drips SPHS to requesters"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "testnet-faucet"
path = "src/main.rs"

[dependencies]
sophis-addresses.workspace = true
sophis-consensus-core.workspace = true
sophis-core.workspace = true
sophis-grpc-client.workspace = true
sophis-notify.workspace = true
sophis-rpc-core.workspace = true
sophis-txscript.workspace = true

axum.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
clap = { workspace = true }
hex.workspace = true
libcrux-ml-dsa.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
faster-hex.workspace = true
getrandom.workspace = true

[lints]
workspace = true
