[package]
name = "sophis-consensus-core"
description = "Sophis consensus core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
devnet-prealloc = []
wasm32-sdk = []
default = []

[dependencies]
arc-swap.workspace = true
borsh.workspace = true
bitflags.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
getrandom.workspace = true
itertools.workspace = true
js-sys.workspace = true
sophis-addresses.workspace = true
sophis-hashes.workspace = true
sophis-math.workspace = true
sophis-merkle.workspace = true
sophis-muhash.workspace = true
sophis-txscript-errors.workspace = true
sophis-utils.workspace = true
rand.workspace = true
libcrux-ml-dsa.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha3.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

# getrandom 0.3 wasm32 requires the `wasm_js` Cargo feature plus the
# `getrandom_backend="wasm_js"` cfg (configured in root .cargo/config.toml).
# Pinned here because consensus-core sits at the bottom of every wasm32 build
# graph (transitive from libcrux-ml-dsa via rand 0.9 → rand_core 0.9).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion.workspace = true
bincode.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true

[[bench]]
name = "serde_benchmark"
harness = false

[lints]
workspace = true
