[package]
name = "sophis-consensus-notify"
description = "Sophis consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
sophis-consensus-core.workspace = true
sophis-core.workspace = true
sophis-hashes.workspace = true
sophis-notify.workspace = true
sophis-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true

[lints]
workspace = true
