[package]
name = "sophis-pow"
description = "Sophis proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["randomx"]
randomx = ["dep:randomx-rs"]
wasm32-sdk = ["sophis-consensus-client/wasm32-sdk"]

[dependencies]
js-sys.workspace = true
sophis-consensus-core.workspace = true
sophis-consensus-client.workspace = true
sophis-hashes.workspace = true
sophis-math.workspace = true
sophis-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true
randomx-rs = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
