[package]
name = "sophis-hashes"
description = "Sophis hashing functions"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake2b_simd.workspace = true
borsh.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
sophis-utils.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
