[package]
name = "sophis-merkle"
description = "Sophis merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sophis-hashes.workspace = true

[lints]
workspace = true
