[package]
name = "sophis-txscript"
description = "Sophis txscript engine library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "kip-10"
# Schnorr/secp256k1-based example, incompatible with Dilithium-only Sophis.
# Gated behind a never-enabled feature so clippy --examples skips it. See
# CLAUDE.md "Só Dilithium existe" invariant. TODO: rewrite for Dilithium
# ML-DSA-44 timelock or move to an obsolete-examples archive.
required-features = ["legacy-schnorr-example"]

[features]
wasm32-core = []
wasm32-sdk = []
# Off by default — only enable to compile the legacy Schnorr/secp256k1 kip-10
# example, which is incompatible with the Dilithium-only chain. See [[example]]
# entry above.
legacy-schnorr-example = []

[dependencies]
blake2b_simd.workspace = true
borsh.workspace = true
cfg-if.workspace = true
hexplay.workspace = true
indexmap.workspace = true
itertools.workspace = true
sophis-addresses.workspace = true
sophis-consensus-core.workspace = true
sophis-hashes.workspace = true
sophis-txscript-errors.workspace = true
sophis-utils.workspace = true
sophis-wasm-core.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
secp256k1.workspace = true
libcrux-ml-dsa.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
smallvec.workspace = true
serde_json.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
