[package]
name = "sophis-index-processor"
description = "Sophis index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sophis-consensus-core.workspace = true
sophis-consensus-notify.workspace = true
sophis-consensusmanager.workspace = true
sophis-core.workspace = true
sophis-database.workspace = true
sophis-index-core.workspace = true
sophis-notify.workspace = true
sophis-utils.workspace = true
sophis-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}

[dev-dependencies]
sophis-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}

[lints]
workspace = true