[package]
name = "sophis-mining-errors"
description = "Sophis mining error definitions"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
sophis-consensus-core.workspace = true

[lints]
workspace = true
